2013-07-03 Added Line Number module - used to draw X-axis ranges
2013-07-03 Updated Custom Scoring module icon
2013-07-02 Added event sending on playback finish to Video module
2013-07-01 Fixed problem with events from not activity gaps
2013-07-01 Fixed problem with disabled state for draggable gaps
2013-06-30 Improved performance in Slider module
2013-06-30 Fixed problem with Graph module loading
2013-06-29 Removed 'Show time' property from Video module
2013-06-28 Updated 3D Viewer module icon
2013-06-28 Fixed problem with audio resources in Slideshow module on Safari Mobile
2013-06-27 Added decimal separator property to Graph module
2013-06-27 Added jQuery CSV library
2013-06-26 Fixed focus problem in Paragraph module on Firefox browser
2013-06-26 Added command for obtaining current frame in Image Viewer module
2013-06-26 Added rotation and quality change commands to 3D Viewer module
2013-06-25 Fixed min/max validation in float validation in Commons (now in version 1.6.10)
2013-06-25 Added parsedValue property in float validation in Commons (now in version 1.6.9)
2013-06-24 Fixed labels visibility in Animation module
2013-06-24 Fixed float validation in Commons (now in version 1.6.8.)
2013-06-21 Added new command to Image Identification module - removeMark - which removes marks done by markAs.. commands
2013-06-21 Added new property - "Is not an activity" to Image Identification module
2013-06-21 Fixed integer validation for zero values in Commons (now in version 1.6.7)
2013-06-21 Added helper method - displaying error messages - in Commons (now in version 1.6.6)
2013-06-21 Added Custom Scoring module. This module allows users to bind multiple modules and create fully scored activities from them
2013-06-17 Fixed displaying error messages in Slideshow module
2013-06-13 Added localization to new page name
2013-06-13 Fixed problem with adding Paragraph module into presentation
2013-06-12 Fixed problem with restoring visibility in Table module after page change