@@ -1,3 +1,5 @@
+2013-07-04 Fixed problem when changing pages in Graph module
+2013-07-04 Fixed drawing range bug in Line Number module
 2013-07-03 Added Line Number module - used to draw X-axis ranges
 2013-07-03 Updated Custom Scoring module icon
 2013-07-02 Added event sending on playback finish to Video module
